--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     .text-manifest {
         font-size: 100px;
         text-align: left;
-
     }
-
     .text-heading {
         font-size: 15px;
     }
@@ -58,15 +56,15 @@
                     <div class="navbar-header">
                         <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                         <a href="#intro" class="navbar-brand scroll-to">
-                            <p style="top:1000px">Manifest</p>
+                            <p style="padding-top:10px;">Manifest</p>
                         </a>
                     </div>
                     <div id="navigation" class="collapse navbar-collapse navbar-right">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="#intro">Home</a></li>
                             <li><a href="#about">About </a></li>
-                            <li><a href="https://events.sweassociation.in/#!/register" target="_blank">Register</a></li>
-                            <li><a href="https://sweassociation.in/" target="_blank">SWEA</a></li>
+                            <li><a onclick="location.href='https://events.sweassociation.in/#!/register'" target="_blank">Register</a></li>
+                            <li><a onclick="location.href='https://sweassociation.in/'" target="_blank">SWEA</a></li>
                         </ul>
                     </div>
                 </div>
