--- a/index.html
+++ b/index.html
@@ -119,17 +119,15 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md-12">
-            <h2 class="heading">Register</h2>
-            <a class="btn btn-lg btn-primary" href="https://events.sweassociation.in">Register</a>
+            <a class="btn btn-lg btn-primary" href="http://tinyurl.com/sweamanifest" target="_blank">FAQs</a>
+            <a class="btn btn-lg btn-primary" href="https://events.sweassociation.in" target="_blank">Register</a>
           </div>
         </div>
       </div>
     </section>
-   <div class = "map-swea">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.311991861337!2d80.043091415014!3d12.823104690953437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f70d37c35faf%3A0x150be8ecf0c8f817!2sSRM+Institute+of+Science+And+Technology!5e0!3m2!1sen!2sin!4v1521655524230" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-   </div>
-   <br>
-   <br>
+    <div class="map-swea">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.311991861337!2d80.043091415014!3d12.823104690953437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f70d37c35faf%3A0x150be8ecf0c8f817!2sSRM+Institute+of+Science+And+Technology!5e0!3m2!1sen!2sin!4v1521655524230" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 
     <footer style="background-color: #111;" class="section-inverse">
       <div class="container">
