--- a/index.html
+++ b/index.html
@@ -23,15 +23,6 @@
     <link rel="shortcut icon" href="favicon.png">
 
 </head>
-<style>
-    .text-manifest {
-        font-size: 100px;
-        text-align: left;
-    }
-    .text-heading {
-        font-size: 15px;
-    }
-</style>
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
     <section id="intro" style="background-image: url('img/manifest.jpg');" class="intro">
@@ -39,10 +30,9 @@
         <div class="content">
             <div class="container clearfix">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12">
-
-                        <h1 class="text-manifest">Manifest'18</h1>
-                        <p style="font-size : 45px; text-align:center;" class="italic">Where You Assert Your Thoughts</p>
+                    <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
+                        <h1 class="heading">Manifest'18</h1>
+                        <p style="font-size:45px;" class="italic">Where You Assert Your Thoughts</p>
                     </div>
                 </div>
             </div>
@@ -62,7 +52,7 @@
                     <div id="navigation" class="collapse navbar-collapse navbar-right">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="#intro">Home</a></li>
-                            <li><a href="#about">About </a></li>
+                            <li><a href="#about">About</a></li>
                             <li><a onclick="location.href='https://events.sweassociation.in/#!/register'" target="_blank">Register</a></li>
                             <li><a onclick="location.href='https://sweassociation.in/'" target="_blank">SWEA</a></li>
                         </ul>
@@ -76,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="heading">About </h2>
+                    <h2 class="heading">About</h2>
                     <p class="lead">Where your words matter</p>
                     <p>Manifest, the Literary event of the Software Engineering Association seeks to bring out the writer in you. We believe, emotions are best expressed in words, while words are best expressed on paper. While the world goes through a revolution
                         in the field of digital media marketing we believe that the value of content in this competitive market is unparalleled. At Manifest 2018, technology meets literature, the ink meets the stylus. An event with no registration fees,
@@ -90,79 +80,75 @@
         </div>
     </section>
 
-
-
-
-
     <section id="text" style="background-color: #333;" class="text-page section-inverse">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-heading">"Curiosity kills the cat" meets Driverless Cars</h2>
-            <div class="row">
-              <div class="col-sm-6">
-                <p>There once was a cat named Pablo- who had sweaty paws and pointy whiskers. Pablo was a feline prodigy; his owner-Atticus- who was pursuing an engineering degree, often read books on Automation and Artificial Intelligence, but Pablo was beyond this. He knew the real secret to attaining knowledge was having a hands-on experience; so he tore apart chunks of Atticus' books and ate the pages.
-                  Ever since his birth, Pablo has been fond of books and that was what made him a curious cat.   </p>
-                <p>He was well versed with Python and R, and ate his algorithms everyday. Be it Logistic Regression or Naive Bayes Classification, he was the master of algorithms used in AI.Every time Atticus was busy coding, Pablo would give him the MeowCode to ease the load. However, as months passed by, Pablo couldn't take it anymore. Atticus was slow and he only worked on small scale projects; but Pablo was looking at a bigger picture. He wanted to work with driverless cars.</p>
-              </div>
-              <div class="col-sm-6">
-                <p> He couldn't find anything worth eating so he scrolled his way through SAE's Levels of Driving Automation with his sweaty paws. From Driver Testing to Absolute Automation, he covered the various aspects of safety, traffic, welfare and he couldn't wait for the world to be a place free of vehicle insurance and fuel inefficiency!</p>
-                <p>His negligence towards Atticus and his growing enthusiasm for being involved in the testing process made Atticus anxious. After an intense session of Whisker Simulation and over a hundred calls being rejected by Tesla and Google, Pablo decided that Uber was his last straw. So he decided to observe self-driving Uber cars in Tempe, Arizona. Over a period of few months, he had been noting his observations down from a distance, so he finally decided to look closely. He was hit by the car and rushed to the Vet by Atticus. After an excruciatingly long surgery, the vet told Atticus, "We couldn't save him, we're sorry". "What was it?", Atticus asked in a distasteful tone. The vet looked into his eyes and said "Curiosity". </p>
-              </div>
+                    <h3 class="text-center">Curiosity kills the cat meets Driverless Cars</h3>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p>There once was a cat named Pablo- who had sweaty paws and pointy whiskers. Pablo was a feline prodigy; his owner-Atticus- who was pursuing an engineering degree, often read books on Automation and Artificial Intelligence, but
+                                Pablo was beyond this. He knew the real secret to attaining knowledge was having a hands-on experience; so he tore apart chunks of Atticus' books and ate the pages. Ever since his birth, Pablo has been fond of books and
+                                that was what made him a curious cat. </p>
+                            <p>He was well versed with Python and R, and ate his algorithms everyday. Be it Logistic Regression or Naive Bayes Classification, he was the master of algorithms used in AI.Every time Atticus was busy coding, Pablo would give
+                                him the MeowCode to ease the load. However, as months passed by, Pablo couldn't take it anymore. Atticus was slow and he only worked on small scale projects; but Pablo was looking at a bigger picture. He wanted to work
+                                with driverless cars.</p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p> He couldn't find anything worth eating so he scrolled his way through SAE's Levels of Driving Automation with his sweaty paws. From Driver Testing to Absolute Automation, he covered the various aspects of safety, traffic, welfare
+                                and he couldn't wait for the world to be a place free of vehicle insurance and fuel inefficiency!</p>
+                            <p>His negligence towards Atticus and his growing enthusiasm for being involved in the testing process made Atticus anxious. After an intense session of Whisker Simulation and over a hundred calls being rejected by Tesla and Google,
+                                Pablo decided that Uber was his last straw. So he decided to observe self-driving Uber cars in Tempe, Arizona. Over a period of few months, he had been noting his observations down from a distance, so he finally decided
+                                to look closely. He was hit by the car and rushed to the Vet by Atticus. After an excruciatingly long surgery, the vet told Atticus, "We couldn't save him, we're sorry". "What was it?", Atticus asked in a distasteful tone.
+                                The vet looked into his eyes and said "Curiosity". </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </section>
 
     <section id="contact" style="background-color: #fff;" class="text-page">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-12">
-            <a class="btn btn-lg btn-primary" href="http://tinyurl.com/sweamanifest" target="_blank">FAQs</a>
-            <a class="btn btn-lg btn-primary" href="https://events.sweassociation.in" target="_blank">Register</a>
-          </div>
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <a class="btn btn-lg btn-primary" href="http://tinyurl.com/sweamanifest" target="_blank">FAQs</a>
+                    <a class="btn btn-lg btn-primary" href="https://events.sweassociation.in" target="_blank">Register</a>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
+
     <div class="map-swea">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.311991861337!2d80.043091415014!3d12.823104690953437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f70d37c35faf%3A0x150be8ecf0c8f817!2sSRM+Institute+of+Science+And+Technology!5e0!3m2!1sen!2sin!4v1521655524230" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.311991861337!2d80.043091415014!3d12.823104690953437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f70d37c35faf%3A0x150be8ecf0c8f817!2sSRM+Institute+of+Science+And+Technology!5e0!3m2!1sen!2sin!4v1521655524230"
+            width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
     <footer style="background-color: #111;" class="section-inverse">
-      <div class="container">
-        <div class="row copyright">
-          <div class="col-md-6">
-            <p>&copy;2018 SWEA</p>
-          </div>
-          <div class="col-md-6">
-              <p class="social">
-                  <a href="https://www.facebook.com/swea.srm/" title="" class="facebook"><i class="fa fa-facebook"></i></a>
-                  <a href="https://twitter.com/swea_srm" title="" class="twitter"><i class="fa fa-twitter"></i></a>
-                  <a href="https://www.instagram.com/swea_srm/" title="" class="instagram"><i class="fa fa-instagram"></i></a>
-                  <a href="https://www.youtube.com/sweasrm" title = "" class="youtube"><i class="fa fa-youtube"></i></a>
-              </p>
-          </div>
+        <div class="container">
+            <div class="row copyright">
+                <div class="col-md-6">
+                    <p>&copy;2018 SWEA</p>
+                </div>
+                <div class="col-md-6">
+                    <p class="social">
+                        <a href="https://www.facebook.com/swea.srm/" title="" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="https://twitter.com/swea_srm" title="" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/swea_srm/" title="" class="instagram"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/sweasrm" title="" class="youtube"><i class="fa fa-youtube"></i></a>
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-    <script src="js/jquery.cookie.js"></script>
-
-    <script src="js/ekko-lightbox.js"> </script>
-
     <script src="js/jquery.sticky.js"></script>
     <script src="js/jquery.scrollTo.min.js"></script>
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
-
     <script src="js/gmaps.js"></script>
-
     <script src="js/front.js"></script>
-  </body>
+</body>
+
 </html>
